bk_ida/gccida/g1/write_dependence_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/write_dependence_p/src/alias.c:2679:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/write_dependence_p/src/alias.c:2680:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)mem + 2)) ) 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/write_dependence_p/src/obj/alias.o] Error 1
